fix: table proper overflow

--- a/src/Table/e-table.scss
+++ b/src/Table/e-table.scss
@@ -5,7 +5,7 @@
 .e-table {
   $root: &;
   box-sizing: border-box; border: 1px solid #e0e0e0;
-  &-wrapper { min-width: 100%; position: relative; height: 100%; display: inline-block; }
+  &-wrapper { min-width: 100%; position: relative; display: inline-block; }
   &-header-cell {
     box-sizing: border-box; padding: 0 20px; font: 300 13px/1 'OpenSans'; text-align: left; color: #1f2532;
   }
